--- a/Task_1/Check_your_SQL.ipynb
+++ b/Task_1/Check_your_SQL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -55,159 +55,140 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>CustomerID</th>\n",
        "      <th>Name</th>\n",
        "      <th>Surname</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Income</th>\n",
-       "      <th>Region</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>DuplicateCount</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>prince</td>\n",
-       "      <td>linda</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>89097</td>\n",
-       "      <td>GT</td>\n",
+       "      <td>grayson</td>\n",
+       "      <td>aziza</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>aria</td>\n",
+       "      <td>malek</td>\n",
+       "      <td>14</td>\n",
        "      <td>2</td>\n",
-       "      <td>shneur</td>\n",
-       "      <td>axel</td>\n",
-       "      <td>34</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>62719</td>\n",
-       "      <td>EC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>michelle</td>\n",
-       "      <td>anisa</td>\n",
-       "      <td>48</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>45999</td>\n",
-       "      <td>EasternCape</td>\n",
+       "      <td>henry</td>\n",
+       "      <td>noemi</td>\n",
+       "      <td>98</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>eli</td>\n",
-       "      <td>zoe</td>\n",
-       "      <td>34</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>48926</td>\n",
-       "      <td>NC</td>\n",
+       "      <td>alina</td>\n",
+       "      <td>carter</td>\n",
+       "      <td>160</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>max</td>\n",
-       "      <td>virginia</td>\n",
-       "      <td>67</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>80778</td>\n",
-       "      <td>MP</td>\n",
+       "      <td>scarlett</td>\n",
+       "      <td>naomi</td>\n",
+       "      <td>176</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>5</th>\n",
+       "      <td>gabriela</td>\n",
+       "      <td>jesse</td>\n",
+       "      <td>281</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1009</th>\n",
-       "      <td>996</td>\n",
-       "      <td>tianna</td>\n",
-       "      <td>elizabeth</td>\n",
-       "      <td>39</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>81930</td>\n",
-       "      <td>WC</td>\n",
+       "      <th>6</th>\n",
+       "      <td>juliana</td>\n",
+       "      <td>hunter</td>\n",
+       "      <td>304</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1010</th>\n",
-       "      <td>997</td>\n",
-       "      <td>mariah</td>\n",
-       "      <td>januel</td>\n",
-       "      <td>65</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>45704</td>\n",
-       "      <td>MP</td>\n",
+       "      <th>7</th>\n",
+       "      <td>chavy</td>\n",
+       "      <td>rebecca</td>\n",
+       "      <td>370</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1011</th>\n",
-       "      <td>998</td>\n",
-       "      <td>liam</td>\n",
-       "      <td>prince</td>\n",
-       "      <td>52</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>84203</td>\n",
-       "      <td>MP</td>\n",
+       "      <th>8</th>\n",
+       "      <td>nelson</td>\n",
+       "      <td>rehan</td>\n",
+       "      <td>501</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1012</th>\n",
-       "      <td>999</td>\n",
+       "      <th>9</th>\n",
+       "      <td>eileen</td>\n",
+       "      <td>augustus</td>\n",
+       "      <td>630</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>wesley</td>\n",
+       "      <td>shimon</td>\n",
+       "      <td>687</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>aayan</td>\n",
+       "      <td>devin</td>\n",
+       "      <td>888</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>alexis</td>\n",
+       "      <td>amira</td>\n",
+       "      <td>957</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
        "      <td>crystal</td>\n",
        "      <td>luna</td>\n",
-       "      <td>71</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>52113</td>\n",
-       "      <td>LP</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1013</th>\n",
-       "      <td>1000</td>\n",
-       "      <td>nicholas</td>\n",
-       "      <td>rylee</td>\n",
-       "      <td>51</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>84711</td>\n",
-       "      <td>LP</td>\n",
+       "      <td>999</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1014 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      CustomerID      Name    Surname  Age  Gender  Income       Region\n",
-       "0              1    prince      linda   24  Female   89097           GT\n",
-       "1              2    shneur       axel   34  Female   62719           EC\n",
-       "2              3  michelle      anisa   48  Female   45999  EasternCape\n",
-       "3              4       eli        zoe   34  Female   48926           NC\n",
-       "4              5       max   virginia   67  Female   80778           MP\n",
-       "...          ...       ...        ...  ...     ...     ...          ...\n",
-       "1009         996    tianna  elizabeth   39  Female   81930           WC\n",
-       "1010         997    mariah     januel   65  Female   45704           MP\n",
-       "1011         998      liam     prince   52  Female   84203           MP\n",
-       "1012         999   crystal       luna   71  Female   52113           LP\n",
-       "1013        1000  nicholas      rylee   51    Male   84711           LP\n",
-       "\n",
-       "[1014 rows x 7 columns]"
+       "        Name   Surname  CustomerID  DuplicateCount\n",
+       "0    grayson     aziza           9               2\n",
+       "1       aria     malek          14               2\n",
+       "2      henry     noemi          98               2\n",
+       "3      alina    carter         160               2\n",
+       "4   scarlett     naomi         176               2\n",
+       "5   gabriela     jesse         281               2\n",
+       "6    juliana    hunter         304               2\n",
+       "7      chavy   rebecca         370               2\n",
+       "8     nelson     rehan         501               2\n",
+       "9     eileen  augustus         630               2\n",
+       "10    wesley    shimon         687               2\n",
+       "11     aayan     devin         888               2\n",
+       "12    alexis     amira         957               2\n",
+       "13   crystal      luna         999               2"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "qry = \"\"\"  \n",
-    "SELECT * FROM customers\n",
-    "\"\"\"\n",
-    "\n",
-    "# qry = sql.question_1()\n",
+    "qry = sql.question_1()\n",
     "\n",
     "\n",
     "with duckdb.connect(\"database/loan.db\") as cursor:\n",
@@ -225,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +215,7 @@
        "CompletedProcess(args=['python3', 'database/database_load.py'], returncode=0)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
