Completed Task_1/Advanced_SQL.py q1-3

--- a/Task_1/Check_your_SQL.ipynb
+++ b/Task_1/Check_your_SQL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -55,140 +55,80 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Surname</th>\n",
-       "      <th>CustomerID</th>\n",
-       "      <th>DuplicateCount</th>\n",
+       "      <th>RejectedApplications</th>\n",
+       "      <th>Province</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>grayson</td>\n",
-       "      <td>aziza</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>Free State</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>aria</td>\n",
-       "      <td>malek</td>\n",
-       "      <td>14</td>\n",
-       "      <td>2</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>KwaZulu-Natal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>henry</td>\n",
-       "      <td>noemi</td>\n",
-       "      <td>98</td>\n",
-       "      <td>2</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>Western Cape</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>alina</td>\n",
-       "      <td>carter</td>\n",
-       "      <td>160</td>\n",
-       "      <td>2</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>Gauteng</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>scarlett</td>\n",
-       "      <td>naomi</td>\n",
-       "      <td>176</td>\n",
-       "      <td>2</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>Eastern Cape</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>gabriela</td>\n",
-       "      <td>jesse</td>\n",
-       "      <td>281</td>\n",
-       "      <td>2</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>Northern Cape</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>juliana</td>\n",
-       "      <td>hunter</td>\n",
-       "      <td>304</td>\n",
-       "      <td>2</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>Mpumalanga</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>chavy</td>\n",
-       "      <td>rebecca</td>\n",
-       "      <td>370</td>\n",
-       "      <td>2</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>North West</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>nelson</td>\n",
-       "      <td>rehan</td>\n",
-       "      <td>501</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>eileen</td>\n",
-       "      <td>augustus</td>\n",
-       "      <td>630</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>wesley</td>\n",
-       "      <td>shimon</td>\n",
-       "      <td>687</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>aayan</td>\n",
-       "      <td>devin</td>\n",
-       "      <td>888</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>alexis</td>\n",
-       "      <td>amira</td>\n",
-       "      <td>957</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>crystal</td>\n",
-       "      <td>luna</td>\n",
-       "      <td>999</td>\n",
-       "      <td>2</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>Limpopo</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Name   Surname  CustomerID  DuplicateCount\n",
-       "0    grayson     aziza           9               2\n",
-       "1       aria     malek          14               2\n",
-       "2      henry     noemi          98               2\n",
-       "3      alina    carter         160               2\n",
-       "4   scarlett     naomi         176               2\n",
-       "5   gabriela     jesse         281               2\n",
-       "6    juliana    hunter         304               2\n",
-       "7      chavy   rebecca         370               2\n",
-       "8     nelson     rehan         501               2\n",
-       "9     eileen  augustus         630               2\n",
-       "10    wesley    shimon         687               2\n",
-       "11     aayan     devin         888               2\n",
-       "12    alexis     amira         957               2\n",
-       "13   crystal      luna         999               2"
+       "   RejectedApplications       Province\n",
+       "0                  51.0     Free State\n",
+       "1                  51.0  KwaZulu-Natal\n",
+       "2                  58.0   Western Cape\n",
+       "3                  65.0        Gauteng\n",
+       "4                  68.0   Eastern Cape\n",
+       "5                  62.0  Northern Cape\n",
+       "6                  67.0     Mpumalanga\n",
+       "7                  50.0     North West\n",
+       "8                  61.0        Limpopo"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "qry = sql.question_1()\n",
+    "qry = asql.question_2()\n",
     "\n",
     "\n",
     "with duckdb.connect(\"database/loan.db\") as cursor:\n",
@@ -206,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +155,7 @@
        "CompletedProcess(args=['python3', 'database/database_load.py'], returncode=0)"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
