--- a/Task_2/python.ipynb
+++ b/Task_2/python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,78 @@
     "df_actual = pd.read_csv(root + \"/data/actual_loan_repayments.csv\")\n",
     "df_balances = py.calculate_df_balances(df_scheduled, df_actual)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    RepaymentID  LoanID  Month  ActualRepayment  LoanAmount  \\\n",
+      "0         544.0       1      1          2399.54     52000.0   \n",
+      "1        1313.0       1      2          2399.54     52000.0   \n",
+      "2        2551.0       1      3          2399.54     52000.0   \n",
+      "3        3636.0       1      4          2399.54     52000.0   \n",
+      "4        4300.0       1      5          2399.54     52000.0   \n",
+      "5        5847.0       1      6          2399.54     52000.0   \n",
+      "6        6362.0       1      7          2399.54     52000.0   \n",
+      "7        7520.0       1      8          2399.54     52000.0   \n",
+      "8        8699.0       1      9          2399.54     52000.0   \n",
+      "9        9438.0       1     10          2399.54     52000.0   \n",
+      "10      10053.0       1     11          2399.54     52000.0   \n",
+      "11      11306.0       1     12          2399.54     52000.0   \n",
+      "\n",
+      "    ScheduledRepayment  LoanBalanceStart  LoanBalanceEnd  InterestPayment  \n",
+      "0              2399.54          52000.00        50033.79           433.33  \n",
+      "1              2399.54          50033.79        48051.20           416.95  \n",
+      "2              2399.54          48051.20        46052.09           400.43  \n",
+      "3              2399.54          46052.09        44036.32           383.77  \n",
+      "4              2399.54          44036.32        42003.74           366.97  \n",
+      "5              2399.54          42003.74        39954.24           350.03  \n",
+      "6              2399.54          39954.24        37887.65           332.95  \n",
+      "7              2399.54          37887.65        35803.84           315.73  \n",
+      "8              2399.54          35803.84        33702.66           298.37  \n",
+      "9              2399.54          33702.66        31583.98           280.86  \n",
+      "10             2399.54          31583.98        29447.64           263.20  \n",
+      "11             2399.54          29447.64        27293.50           245.40  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_balances.head(12))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "78365.85352799998"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from Python import *\n",
+    "\n",
+    "question_4(df_balances)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -41,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
